--- a/src/app/views/entity/compliance-detail/compliance-detail.component.html
+++ b/src/app/views/entity/compliance-detail/compliance-detail.component.html
@@ -87,7 +87,7 @@
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
                 <h4 class="mb-5">Status</h4>
-                <span>{{complianceModel.stat}}</span>
+                <span>{{complianceModel.qualStatDesc}}</span>
               </div>
             </div>
           </div>
