--- a/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.html
+++ b/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.html
@@ -33,10 +33,11 @@ More text...........?????????
       
           <div class="form-group">
             <label class="paddingTop10" for="state">Sentiments of:</label>
-            <ng-select [items]="personList" bindLabel="dispname" name="person"
+            <ng-select *ngIf="personList.length > 0" [items]="personList" bindLabel="dispname" name="person"
               bindValue="personID" value="sentimentModel.personName" [(ngModel)]="selectedPerson" [multiple]="false"
               [virtualScroll]="true" placeholder="Select the Person" required>
             </ng-select>
+            <p *ngIf="personList.length == 0"> No Person Found</p>
             <!-- <ng-select *ngIf="personList.length == 0" [items]="personList" bindLabel="dispname" name="person"
               bindValue="personID" value="sentimentModel.personName" [(ngModel)]="selectedPerson" [multiple]="false"
               [virtualScroll]="true" placeholder="Select the Person" required>
