--- a/src/app/customUI/dialogs/update-note/update-note.component.html
+++ b/src/app/customUI/dialogs/update-note/update-note.component.html
@@ -11,16 +11,17 @@
         <div class="modal-body">
           <div class="clear paddingTop15">
           </div>
-          <span>
+          <span *ngIf = "entityInfo.type !='P'">
             <label for="cars">Category:</label>
             <div class="clear paddingTop15">
             </div>
             <input type="text" class="form-control"  [(ngModel)]="notesCategory"
             [ngModelOptions]="{standalone: true}" readonly> 
           </span>
-          <div class="clear paddingTop15">
+          <div *ngIf = "entityInfo.type !='P'" class="clear paddingTop15">
           </div>
-          
+
+          <span *ngIf = "entityInfo.type !='P'">
             <label for="cars">Summary:</label>
             <div class="clear paddingTop15">
             </div>
@@ -28,7 +29,8 @@
             <input type="text" class="form-control" placeholder="Write the Summary" [(ngModel)]="summary"
             [ngModelOptions]="{standalone: true}" readonly> 
             </div>
-          <div class="clear paddingTop15">
+            </span>
+          <div *ngIf = "entityInfo.type !='P'" class="clear paddingTop15">
           </div>
           <label for="cars">Notes:</label>
           <div class="clear paddingTop15">
