--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -26,7 +26,10 @@
                 <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
               </div>
               <h4>{{item.dispname}} <span>({{item.personID}})</span></h4>
-              <span class="paddingTop5">{{item.jobTitle}}</span>
+              <!-- <span class="paddingTop5">{{item.jobTitle}}</span> -->
+              <span>{{getAddress(item)}}</span>
+
+
               <span class="date">{{item.effectiveDate | slice:0:10}}</span>
               <div class="clearfix"></div>
               <div class="row">
