--- a/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
@@ -67,7 +67,7 @@
         <label for="sel1">Other Settings</label>
       </div>
       <div class="ag-detail-icons">
-        <a (click)="resetApplicationSettings()" alt=""><img src="../../../../../images/power.svg" alt="" (click)="resetApplicationSettings()"> &nbsp; Reset Application Settings</a>
+        <a id="resetClick" (click)="resetApplicationSettings()" alt=""><img src="../../../../../images/power.svg" alt="" (click)="resetApplicationSettings()"> &nbsp; Reset Application Settings</a>
       </div>
     </div>
   </div>
