Latest UI changes

--- a/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.css
+++ b/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.css
@@ -5,3 +5,8 @@
       width: 2em !important;
       color: orange !important;
   }
+  .saveButton
+  {
+color: grey !important;
+pointer-events: none;
+  }
