--- a/src/app/views/agent/agent-objective/agent-objective.component.html
+++ b/src/app/views/agent/agent-objective/agent-objective.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="container app-bg2 bottom-wrapper-for-back">
     <ul class="nav nav-tabs mr-25 ml-25">
-      <li class="active"><a data-toggle="tab" href="#tab1" (click)="onTabClick(1)">Agent Objective</a></li>
+      <li class="active"><a data-toggle="tab" href="#tab1" (click)="onTabClick(1)"  [class.disabled] = "true">Agent Objective</a></li>
       <li><a data-toggle="tab" href="#tab2" (click)="onTabClick(2)">Our Objective</a></li>
     </ul>
 
@@ -238,7 +238,7 @@
       </button>
     </div>
     <div class="col-xs-12">
-    <div class="form-group" *ngIf = "agentActiveObjective !=null">
+    <div class="form-group" *ngIf = "agentActiveSentiment !=null">
       <button type="button" class="btn btn-primary addNoteBtn" data-toggle="modal" (click)="openViewSentimentHistory(agentActiveObjective)">
         <img src="images/add-note-icon.svg" alt="" > &nbsp; View Sentiment History 
       </button>
@@ -264,7 +264,7 @@
                   </div>
                   <div class="col-xs-12">
 
-                  <div class="form-group" *ngIf = "ourActiveObjective !=null">
+                  <div class="form-group" *ngIf = "ourActiveSentiment !=null">
                     <button type="button" class="btn btn-primary addNoteBtn" (click)="openViewSentimentHistory(ourActiveObjective)" data-toggle="modal">
                       <img src="images/add-note-icon.svg" alt="" > &nbsp; View Sentiment History 
                     </button>
