--- a/src/app/views/agent/agent-notes/my-notes/my-notes.component.html
+++ b/src/app/views/agent/agent-notes/my-notes/my-notes.component.html
@@ -1,38 +1,42 @@
 <div class="container tab-content">
   <div id="allNotesId" class="tab-pane fade in active" style="overflow: hidden" *ngIf="hideNoDataDiv">
-<form>
-    <ul>
-      <li *ngFor="let item of agentNotes;let i = index">
-        <div class="row">
-          <div class="col-xs-12 col-md-12 cell-bg">
+    <form>
+      <ul>
+        <li *ngFor="let item of agentNotes;let i = index">
+          <div class="row">
+            <div class="col-xs-12 col-md-12 cell-bg">
 
-            <div class="myNotesWp"><img src="../../../../../images/ic_note_profile.svg" alt=""> My Notes</div>
-            <br>
+              <div class="myNotesWp"><img src="../../../../../images/ic_note_profile.svg" alt=""> My Notes</div>
+              <br>
 
-            <!-- <div class="row">
+              <!-- <div class="row">
               <div class="col-md-3 col-xs-12">
 
                 <label>Category:</label>
                 <input type="text" class="form-control" [disabled]=true value="">
               </div>
             </div> -->
-            <div class="col-xs-12 col-md-12">
-              <div class="agent-contact">
-                <div class="clearfix" *ngIf = "categoryAndSummaryVisibility"></div>
-                <div class="state"  *ngIf = "categoryAndSummaryVisibility"><label for="category">Category</label><br><span>{{item.category}}</span></div>
-                <div class="state"  *ngIf = "categoryAndSummaryVisibility"><label for="summary">Summary</label><br> <span>{{item.subject}}</span></div>
-                <div class="state" style="width: 100% !important;"><label for="note">Note</label><br><span >{{item.notes}}</span></div>
+              <div class="col-xs-12 col-md-12">
+                <div class="agent-contact">
+                  <div class="clearfix" *ngIf="categoryAndSummaryVisibility"></div>
+                  <div class="state" *ngIf="categoryAndSummaryVisibility"><label
+                      for="category">Category</label><br><span>{{item.category}}</span></div>
+                  <div class="state" *ngIf="categoryAndSummaryVisibility"><label for="summary">Summary</label><br>
+                    <span>{{item.subject}}</span>
+                  </div>
+                  <div class="state" style="width: 100% !important;"><label
+                      for="note">Note</label><br><span>{{item.notes}}</span></div>
+                </div>
               </div>
-            </div>
 
-            <!-- <div class="row">
+              <!-- <div class="row">
               <div class="col-md-3 col-xs-12">
 
                 <label>Summary:</label>
                 <input type="text" class="form-control" [disabled]=true value="{{item.subject}}">
               </div>
             </div> -->
-            <!-- <br>
+              <!-- <br>
             <div class="row">
               <div class="col-md-3 col-xs-12">
                 <label>Note:</label>
@@ -46,7 +50,7 @@
 
 
 
-            <!-- <div class="col-xs-6 col-md-6 noPadding">
+              <!-- <div class="col-xs-6 col-md-6 noPadding">
               <div class="myNotesWp textRight">
                 dgdsg
               </div>
@@ -57,45 +61,46 @@
               </div>
             </div> -->
 
-            <div class="clearfix paddingTop5"></div>
-            <div class="divider"></div>
-            <div class="clearfix paddingTop5"></div>
+              <div class="clearfix paddingTop5"></div>
+              <div class="divider"></div>
+              <div class="clearfix paddingTop5"></div>
 
-            <div class="col-xs-6 col-md-6 noPadding">
-              <div class="ag-detail-icons">
-                <a alt="" (click)="onDeleteClick(item,i)"><img src="../../../../../images/ic_delete.svg" alt="">
-                  Delete</a>
+              <div class="col-xs-6 col-md-6 noPadding">
+                <div class="ag-detail-icons">
+                  <a alt="" *ngIf="entityModel.type === 'P'" (click)="onDeleteClick(item,i)"><img
+                      src="../../../../../images/ic_delete.svg" alt="">
+                    Delete</a>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-6 noPadding">
+                <div class="ag-detail-icons textRight">
+                  <a alt="" data-toggle="modal" data-target="#updateNewNotes" (click)="onEditClick(item,i)"><img
+                      src="../../../../../images/ic_note_edit.svg" alt="">
+                    Edit</a>
+                </div>
               </div>
             </div>
-            <div class="col-xs-6 col-md-6 noPadding">
-              <div class="ag-detail-icons textRight">
-                <a alt="" data-toggle="modal" data-target="#updateNewNotes" (click)="onEditClick(item,i)"><img
-                    src="../../../../../images/ic_note_edit.svg" alt="">
-                  Edit</a>
-              </div>
-            </div>
+
           </div>
+        </li>
+      </ul>
+      <div class="clearfix paddingTop15"></div>
 
+      <div class="row  marginBottom40" *ngIf="moreDataAvailable">
+        <div class="col-xs-12 col-md-12 loadMoreWp">
+          <hr />
+          <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
         </div>
-      </li>
-    </ul>
-    <div class="clearfix paddingTop15"></div>
-
-    <div class="row  marginBottom40" *ngIf="moreDataAvailable">
-      <div class="col-xs-12 col-md-12 loadMoreWp">
-        <hr />
-        <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
       </div>
-    </div>
-    <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
+      <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
 
-    <button (click)="topFunction()" id="myBtn" title="Go to top"><span
-        class="glyphicon glyphicon-arrow-up"></span></button>
-      </form>
+      <button (click)="topFunction()" id="myBtn" title="Go to top"><span
+          class="glyphicon glyphicon-arrow-up"></span></button>
+    </form>
   </div>
   <div class="serach-emp " *ngIf="!hideNoDataDiv">
     <h2><em>It is Empty Here!</em></h2>
     <p><em>{{errorMsg}}</em></p>
   </div>
-  
+
 </div>
